--- a/src/style.css
+++ b/src/style.css
@@ -32,7 +32,7 @@ p, h1, h2, h3, h4, h5, h6 {
 p {
   text-wrap: pretty;
 }
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6 {          
   text-wrap: balance;
 }
 
@@ -47,11 +47,18 @@ body {
   font-family: "Ubuntu Mono";
   display: flex;
   flex-direction: column;
-  gap: 16px;
+  gap: 10px;
   height: 100dvh;
   width: max(calc(14ch * 2 + 10px), 100vw);
   align-items: center;
   padding: 5px;
+  font-size: 1.2rem;
+}
+
+main { 
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
 }
 h1, h2 {
   font-weight: 400;
@@ -125,6 +132,39 @@ ul {
   .main {
     display: flex;
     gap: 1ch;
+    .check {
+      padding: 0; 
+      min-width: 3ch;
+    }
+    .name:hover {
+      cursor: pointer;
+    }
+    .tomatoes {
+      margin-left: auto;
+      flex-wrap: nowrap;
+      &:hover {
+        cursor: pointer;
+      }
+    }
+  }
+  .note {
+    opacity: 0.5;
+    padding: 0 6ch 0 4ch; 
+    &:hover {
+      cursor: pointer;
+    }
+  }
+}
+
+/* .new-task {
+  .main {
+    display: flex;
+    gap: 1ch;
+    .check {
+      padding: 0; 
+      min-width: 3ch;
+      &:hover { cursor: default; }
+    }
     .tomatoes {
       margin-left: auto;
       flex-wrap: nowrap;
@@ -132,14 +172,120 @@ ul {
   }
   .note {
     opacity: 0.5;
-    padding: 0 6ch 0 4ch; 
+    padding: 0 6ch 0 4ch;
   }
+} */
+
+.new-task,
+.task-edit {
+  background-color: rgb(255 255 255 / 0.2);
+  border-radius: 5px;
+  padding: 0.5rem 6ch 1rem 4ch; 
+  form {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    & input[type="text"] {
+      width: 100%;
+      background: none;
+      border: none;
+      color: #fff;
+      &::placeholder {
+        color: rgb(255 255 255 / 0.5);
+        font-style: italic;
+      }
+      &:focus {
+        outline: none;
+      }
+    }
+    .est-tomatoes-wrapper {
+      label:has(+ &) { margin-bottom: 0.2rem; }
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      gap: 0.5rem;
+      & input { 
+        width: 5rem;
+        flex-shrink: 1; 
+        margin-right: 0.5rem;
+        border: none;
+        outline: none;
+      }
+    }
+    .tomatoes-wrapper {
+      display: flex;
+      gap: 16px;
+      & > * {
+        align-items: center;
+        display: flex;
+        gap: 0.5rem;
+        input { 
+          width: 3rem; 
+          margin-right: 0.5rem;
+          border: none;
+          outline: none;
+        }
+      }
+    }
+    .up, .down {
+      padding: 5px;
+      background-color: #fff;
+      border-radius: 2px;
+      flex-shrink: 0;
+    }
+    .add-note {
+      margin-top: 8px;
+    }
+    .note-wrapper { 
+      position: relative;
+      width: 80%;
+    }
+    .delete:has(+ .note) {
+      position: absolute;
+      top: 18px;
+      right: 3px;
+      content: url("./img/cross.svg");
+      width: 15px;
+      height: 15px;
+      z-index: 1;
+      &:hover {
+        cursor: pointer;
+      }
+    }
+    .note {
+      margin: 16px 0;
+      padding: 20px 20px 0 0;
+      background-color: white;
+      & > textarea {
+        width: 100%;
+        height: 100%;
+        border: none;
+        outline: none;
+        resize: none;
+      }
+    }
+    .form-submit-wrapper {
+      display: flex;
+      gap: 1rem;
+      & > * {
+        width: 6ch;
+      }
+    }
+  }
+}
+.create-task {
+  font-size: 2rem;
+  align-self: center;
+  background-color: rgb(255 255 255 / 0.05);
+  padding: 0 16px;
+  border-radius: 2px;
 }
 
 footer {
   display: flex;
   flex-direction: column;
   width: 100%;
+  padding-bottom: 16px;
   .progress {
     display: flex;
     align-items: first baseline;
@@ -152,33 +298,28 @@ footer {
   .right-brace {
     margin-left: auto;
   }
-  .create-task {
-    font-size: 2rem;
-    align-self: center;
-    background-color: rgb(255 255 255 / 0.05);
-    padding: 0 16px;
-    margin-top: 32px;
-    border-radius: 2px;
-  }
 }
 
 @media (min-width: calc(14rem + 110px)) {
   body {
-    gap: 32px;
+    gap: 16px;
   }
   header {
-    margin-left: auto;
     margin-right: auto;
   }
   .menu-btn {
     position: absolute;
-    top: 0.3rem;
-    right: 0  ;
+    top: 10px;
+    right: 0;
   }
   .clock {
-    font-size: 6rem;
+    font-size: 6rem;  
     line-height: 1;   
   }
+}
+
+@media (min-width: 26rem) {
+  header { margin-right: 0; }
 }
 
 @media (min-width: 65ch) {
@@ -193,8 +334,8 @@ footer {
   } */
   .menu-btn {
     right: calc((100vw - 65ch) / 2);
-  }
-  footer { padding: 0 6ch 0 4ch; }
+  } 
+  footer { padding: 0 6ch 200px 4ch; }
 } 
 
 .checked + .name { text-decoration-line: line-through; }
