--- a/src/style.css
+++ b/src/style.css
@@ -59,6 +59,7 @@ main {
   display: flex;
   flex-direction: column;
   gap: 16px;
+  width: 100%;
 }
 h1, h2 {
   font-weight: 400;
@@ -235,6 +236,7 @@ ul {
     }
     .add-note {
       margin-top: 8px;
+      padding-left: 0;      
     }
     .note-wrapper { 
       position: relative;
@@ -265,14 +267,21 @@ ul {
       }
     }
     .form-submit-wrapper {
+      width: 100%;
       display: flex;
+      justify-content: flex-end;
       gap: 1rem;
       & > * {
         width: 6ch;
+        padding-left: 0;
+      }
+      & > .delete-task {
+        margin-right: auto;
       }
     }
   }
 }
+
 .create-task {
   font-size: 2rem;
   align-self: center;
