--- a/src/style.css
+++ b/src/style.css
@@ -101,7 +101,20 @@ header {
 .clock {
   font-size: 5rem;
   text-align: center;
-  margin-bottom: 32px;
+}
+
+.timer {
+  & .start,
+  .pause {
+    font-size: 2rem;
+    width: 100%;
+    text-align: center;
+    & > button { 
+      background-color: rgb(255 255 255 / 0.05); 
+      border-radius: 2px;
+      padding: 0 1em;
+    }
+  }
 }
 
 .tasks-title-wrapper {
