--- a/src/style.css
+++ b/src/style.css
@@ -344,6 +344,30 @@ footer {
   }
 }
 
+.settings {
+  position: absolute;
+  z-index: 2;
+  background-color: #808080;
+  height: 100dvh;
+  width: 100dvw;
+  top: 0; 
+  right: 0;
+  & > form {
+    margin-top: 16px; 
+    display: flex;
+    flex-direction: column;
+    padding: 0 1rem;
+    & .setting-controls {
+      display: flex;
+      flex-direction: column;
+      align-items: start;
+      & > button {
+        padding: 0;
+      }
+    }
+  }
+}
+
 @media (min-width: calc(14rem + 110px)) {
   body {
     gap: 16px;
@@ -355,6 +379,7 @@ footer {
     position: absolute;
     top: 10px;
     right: 0;
+    z-index: 3;
   }
   .clock {
     font-size: 6rem;  
@@ -380,6 +405,13 @@ footer {
     right: calc((100vw - 65ch) / 2);
   } 
   footer { padding: 0 6ch 200px 4ch; }
+  .settings {
+    top: 7px;
+    right: calc((100vw - 65ch) / 2);
+    width: 30ch;
+    height: 75%;
+    border-radius: 5px;
+  }
 } 
 
 .checked + .name { text-decoration-line: line-through; }
